--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -493,6 +493,9 @@ services:
   web:
     image: langgenius/dify-web:1.1.3
     restart: always
+    # 添加以下 ports 配置
+    ports:
+      - "3001:3000"    # 将外部端口改为 3001，注意缩进格式 
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
       APP_API_URL: ${APP_API_URL:-}
